# tensorbay-python-sdk

./: .gitignore  .gitlint  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  markdownlint.json  requirements.txt  requirements_docs.txt  requirements_linter.txt  requirements_test.txt  requirments_docs.txt  setup.cfg  setup.py  vale.ini
.github/: CODEOWNERS
.github/workflows/: build_docs.yaml  integration_test.yaml  pre-commit.yaml  test.yaml  test_integration.yaml  test_unit.yaml  unit_test.yaml  vale_lint.yaml  vale_linting.yaml
docs/: Makefile  __init__.py
docs/code/: BSTLD.py  CADC.py  DogsVsCats.py  LeedsSportsPose.py  NeolixOD.py  Newsgroups20.py  THCHS30.py  VOC2012Segmentation.py  __init__.py  basic_search.py  branch.py  cache.py  cloud_storage.py  diff.py  draft_and_commit.py  getting_started_with_tensorbay.py  glossary.py  merge_datasets.py  move_and_copy.py  pharos.py  profile.py  request_configuration.py  search_result.py  sextant.py  squash_and_merge.py  storage_config.py  tag.py  update_dataset.py  use_dataset_in_paddlepaddle.py  use_dataset_in_pytorch.py  use_dataset_in_tensorflow.py  use_internal_endpoint.py
docs/plugins/: __init__.py  example_creator.py
docs/source/: __init__.py  advanced_features.rst  api.rst  api_reference.rst  basic_concepts.rst  conf.py  contribution.rst  doc_demo.rst  examples.rst  exception.rst  features.rst  index.rst  quick_start.rst  supported_label_types.rst  tensorbay_sdk_api.rst
examples/: .gitkeep  BSTLD.py  CADC.py  DogsVsCats.py  LeedsSportsPose.py  NeolixOD.py  NewsGroups20.py  Newsgroups20.py  THCHS30.py  __init__.py  bstld.py  dogsvscats.py  draft_and_commit.py  getting_started_with_tensorbay.py  leedssportspose.py  neolixod.py  newsgroup20.py  pharos.py  request_configuration.py  tag.py  thchs30.py  update_dataset.py  use_internal_endpoint.py
graviti/: __init__.py
graviti/array/: __init__.py
graviti/client/: __init__.py  branch.py  catalog.py  commit.py  data.py  dataset.py  draft.py  label.py  notes.py  request.py  segment.py  tag.py  user.py
graviti/dataframe/: __init__.py  pandas_extension.py
tensorbay/: __init__.py  __verison__.py  __version__.py  conftest.py  exception.py  py.typed
tensorbay/apps/: sextant.py  (+1 more)
tests/: __init__.py  conftest.py  test_auth_storage.py  test_basic_search.py  test_branch.py  test_cache.py  test_catalog.py  test_cloud.py  test_commit.py  test_data.py  test_dataset.py  test_datasetclient.py  test_draft.py  test_gas.py  test_label.py  test_move_and_copy.py  test_segment.py  test_segmentclient.py  test_sensor.py  test_squash_and_merge.py  test_tag.py  test_upload.py  utility.py
vale_test/: temp.txt  test1.py  test2.rst  test3.txt
(+644 files in other folders)
