#
# Copyright 2021 Graviti. Licensed under MIT License.
#

[metadata]
name = tensorbay
version = attr: tensorbay.__version__
url = https://github.com/Graviti-AI/tensorbay-python-sdk
author = Graviti
author_email = pypi@graviti.com
license = MIT
license_file = LICENSE
keywords = graviti, tensorbay, dataset
description = Graviti TensorBay Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    filetype
    numpy
    numpy-quaternion
    requests
    requests_toolbelt
    sortedcontainers
    typing_extensions
    ulid-py

[options.packages.find]
exclude = *.tests

[options.package_data]
tensorbay = opendataset/*/catalog*.json

[options.entry_points]
console_scripts = gas = tensorbay.client.cli:cli
